# aarch64_http_server

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARTICLE.md  ASSEMBLY_OPTIMIZATION_REPORT.md  CHANGELOG.md  CMakeLists.txt  COPY_PASTE_COMMANDS.txt  Cargo.toml  DOCKER_TESTING.md  Dockerfile  Dockerfile.dev  FEATURE_COMPLETION_REPORT.md  FILES_TO_DELETE.md  GIT_CLEANUP_GUIDE.md  GIT_CLEANUP_INSTRUCTIONS.md  MANUAL_GIT_CLEANUP.md  Makefile  Makefile.new  PERFORMANCE_REPORT.md  PHASE_1_3_SUMMARY.md  PHASE_1_4_SUMMARY.md  PHASE_2_1_SUMMARY.md  PROJECT_STATUS_REPORT.md  README.md  README_v1.1.0+.md  REFACTOR_PLAN.md  REFACTOR_SUCCESS.md  REFACTOR_SUMMARY.md  RELEASE_SUMMARY.md  ROADMAP.md  TODO.md  anx.conf  benchmark_report.txt  benchmark_results.csv  check_compression.sh  check_status.sh  execute_cleanup.sh  git_cleanup.sh  git_cleanup_safe.sh  (+6 more)
certs/: server.crt  server.key
configs/: anx.conf.example  nginx.conf.example
docs/: ARCHITECTURE.md  SYSCALLS.md  api-documentation.md  contributing.md  development-guide.md  installation-and-configuration.md  user-manual.md
docs/development/: ARCHITECTURE.md  SYSCALLS.md
examples/: Makefile  cli_example.c  ffi_example.c
release/: README.md  UPGRADE_GUIDE.md
release/configs/: anx.toml
release/docs/: API_REFERENCE.md  CONFIGURATION.md  QUICK_START.md
release/docs/development/: ASSEMBLY_OPTIMIZATION_REPORT.md
scripts/: README.md  benchmark.sh  build.sh  quick_benchmark.sh
src/: asm_core.h  asm_integration.c  asm_mempool.c  asm_mempool.h  asm_opt.c  asm_opt.h  bandwidth.c  cache.c  cache.h  compress.c  compress.h  config.c  config.h  core.c  core.h  headers.c  health_api.h  health_check.h  http.c  http.h  https.c  https.h  lb_proxy.c  lb_proxy.h  lib.rs  load_balancer.c  load_balancer.h  log.c  log.h  main.c  main.s  net.c  net.h  proxy.c  push.h  stream.h  util.c  util.h
src/core/: config.c  config.h  core.c  core.h  log.c  log.h  main.c  net.c  net.h  version.c
src/http/: chunked.c  chunked.h  headers.c  headers.h  http.c  http.h  http_module.c  http_module.h  https.c  https.h
src/include/: anx.h  anx_rust.h  common.h  version.h
src/proxy/: health_api.c  health_check.c  lb_proxy.c  load_balancer.c  proxy.c  proxy.h
src/rust_modules/cache/: mod.rs
src/rust_modules/cli/: mod.rs
src/rust_modules/config/: mod.rs  nginx_compat.rs  toml_parser.rs
src/rust_modules/ffi/: cli.rs  mod.rs
src/rust_modules/http_parser/: mod.rs
src/stream/: push.c  stream.c
src/utils/: bandwidth.h  cache.c
src/utils/asm/: asm_integration.c  asm_integration.h  asm_mempool.c  asm_opt.c  asm_opt.h
test-configs/: anx.conf
test_web_root/: large.html  test.html
tests/configs/: test_asm_config.conf
tests/data/: small_file.txt
www/: 404.html  index.html  small.txt  test.html
www/another.com/: index.html
www/error/: 404.html
www/example.com/: index.html
www/example.com/static/: asset.txt
www/subdir/: page.html
