[package]
name = "anx_core"
version = "1.1.0"
edition = "2021"
description = "ANX HTTP Server - Core Rust modules"
authors = ["neipor <neitherportal@proton.me>"]
license = "GPL-3.0"
repository = "https://github.com/neitherportal/anx"

[lib]
name = "anx_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["config", "http_parser", "cache"]
config = []
http_parser = []
cache = []
